--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "image-to-uri": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
-    "mongoose-unique-validator": "^4.0.0"
+    "mongoose-unique-validator": "^4.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
     "nodemon": "^2.0.22"
   }
 }
