--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api"
+      "src": "/(.*)",
+      "dest": "/"
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api" }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
 
