--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.37.1",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "image-to-uri": "^1.0.0",
