--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "mongoose-unique-validator": "^4.0.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "whatwg-url": "^13.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
