--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.37.1",
+    "concat-stream": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
     "mongoose": "^7.5.3",
     "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
+    "readable-stream": "^4.4.2",
     "whatwg-url": "^13.0.0"
   },
   "devDependencies": {
