--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.37.1",
     "concat-stream": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "detect-libc": "^2.0.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "image-to-uri": "^1.0.0",
